--- a/share/themes/Kali-Light/gtk-3.0/gtk.css
+++ b/share/themes/Kali-Light/gtk-3.0/gtk.css
@@ -4839,6 +4839,16 @@ radio, menu menuitem radio, menu menuitem:hover radio {
   background-image: linear-gradient(to bottom, white 20%, #fafafa 90%);
   border-color: #c2c2c2;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07); }
+  check:disabled, check:disabled:checked, check:disabled:indeterminate, check:disabled:backdrop, check:disabled:backdrop:checked, check:disabled:backdrop:indeterminate, menu menuitem check:disabled, menu menuitem check:disabled:checked, menu menuitem check:disabled:indeterminate, menu menuitem check:disabled:backdrop, menu menuitem check:disabled:backdrop:checked, menu menuitem check:disabled:backdrop:indeterminate, menu menuitem:hover check:disabled, menu menuitem:hover check:disabled:checked, menu menuitem:hover check:disabled:indeterminate, menu menuitem:hover check:disabled:backdrop, menu menuitem:hover check:disabled:backdrop:checked, menu menuitem:hover check:disabled:backdrop:indeterminate,
+  radio:disabled,
+  radio:disabled:checked,
+  radio:disabled:indeterminate,
+  radio:disabled:backdrop,
+  radio:disabled:backdrop:checked,
+  radio:disabled:backdrop:indeterminate, menu menuitem radio:disabled, menu menuitem radio:disabled:checked, menu menuitem radio:disabled:indeterminate, menu menuitem radio:disabled:backdrop, menu menuitem radio:disabled:backdrop:checked, menu menuitem radio:disabled:backdrop:indeterminate, menu menuitem:hover radio:disabled, menu menuitem:hover radio:disabled:checked, menu menuitem:hover radio:disabled:indeterminate, menu menuitem:hover radio:disabled:backdrop, menu menuitem:hover radio:disabled:backdrop:checked, menu menuitem:hover radio:disabled:backdrop:indeterminate {
+    border-color: #d9d9d9;
+    background-image: image(#ffffff);
+    color: #5c616c; }
 
 check:checked, check:indeterminate, menu menuitem check:checked, menu menuitem check:indeterminate,
 radio:checked,
@@ -4855,14 +4865,6 @@ radio:indeterminate, menu menuitem radio:checked, menu menuitem radio:indetermin
   radio:checked:backdrop,
   radio:indeterminate:backdrop, menu menuitem radio:checked:backdrop, menu menuitem radio:indeterminate:backdrop {
     background-image: image(#2777ff); }
-
-check:checked:disabled, check:indeterminate:disabled, menu menuitem check:checked:disabled, menu menuitem check:indeterminate:disabled,
-radio:checked:disabled,
-radio:indeterminate:disabled, menu menuitem radio:checked:disabled, menu menuitem radio:indeterminate:disabled, check:disabled, check:disabled:backdrop,
-radio:disabled,
-radio:disabled:backdrop {
-  border-color: #d9d9d9;
-  background-image: image(#ffffff); }
 
 /************
  * GtkScale *
